--- a/extra-addons/rna/views/views.xml
+++ b/extra-addons/rna/views/views.xml
@@ -1,60 +1,15 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <odoo>
   <data>
-    <!-- explicit list view definition -->
-    <!--
-    <record model="ir.ui.view" id="rna.list">
-      <field name="name">rna list</field>
-      <field name="model">rna.rna</field>
-      <field name="arch" type="xml">
-        <tree>
-          <field name="name"/>
-          <field name="value"/>
-          <field name="value2"/>
-        </tree>
-      </field>
-    </record>
-    -->
-
-    <!-- actions opening views on models -->
-    <!--
-    <record model="ir.actions.act_window" id="rna.action_window">
-      <field name="name">rna window</field>
-      <field name="res_model">rna.rna</field>
-      <field name="view_mode">tree,form</field>
-    </record>
-    -->
-
-    <!-- server action to the one above -->
-    <!--
-    <record model="ir.actions.server" id="rna.action_server">
-      <field name="name">rna server</field>
-      <field name="model_id" ref="model_rna_rna"/>
-      <field name="state">code</field>
-      <field name="code">
-        action = {
-          "type": "ir.actions.act_window",
-          "view_mode": "tree,form",
-          "res_model": self._name,
-        }
-      </field>
-    </record>
-    -->
-
-    <!-- Top menu item -->
-    <!--
-    <menuitem name="rna" id="rna.menu_root"/>
-    -->
-    <!-- menu categories -->
-    <!--
-    <menuitem name="Menu 1" id="rna.menu_1" parent="rna.menu_root"/>
-    <menuitem name="Menu 2" id="rna.menu_2" parent="rna.menu_root"/>
-    -->
-    <!-- actions -->
-    <!--
-    <menuitem name="List" id="rna.menu_1_list" parent="rna.menu_1"
-              action="rna.action_window"/>
-    <menuitem name="Server to list" id="rna" parent="rna.menu_2"
-              action="rna.action_server"/>
-    -->
+  	<record id="vista_admision_rna" model="ir.ui.view">
+  		<field name="name">Formulario RNA</field>
+  		<field name="model">admision.admision</field>
+  		<field name="inherit_id" ref="admision.admision_form_view"></field>
+  		<field name="arch" type="xml">
+  			<field name="foto" position="after">
+  				<field name="estadia" widget="gauge" style="width:120px;height:90px;cursor:pointer;"></field>
+  			</field>
+  		</field>
+  	</record>
   </data>
 </odoo>
