--- a/extra-addons/rna/views/views.xml
+++ b/extra-addons/rna/views/views.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
   <data>
-  	<record id="vista_form_admision_rna" model="ir.ui.view">
+  <!-- 	<record id="vista_form_admision_rna" model="ir.ui.view">
   		<field name="name">Formulario RNA</field>
   		<field name="model">admision.admision</field>
   		<field name="inherit_id" ref="admision.admision_form_view"></field>
@@ -10,7 +10,7 @@
   				<field name="estadia" widget="gauge" style="width:180px;height:110px;cursor:pointer;"></field>
   			</field>
   		</field>
-  	</record>
+  	</record> -->
 
   	<record id="vista_tree_admision_rna" model="ir.ui.view">
   		<field name="name">RNA Tree</field>
